# awesometd

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  TODO  autogen.sh  configure.ac  cursor.c  cursor.h  eventloop.c  eventloop.h  game.c  game.h  gfx_buttons.c  gfx_buttons.h  gfx_charmap.c  gfx_charmap.h  level.c  level.h  main.c  render.c  render.h  settings.h  sprites.c  sprites.h  timers.c  timers.h
debian/: changelog  control  copyright  rules
legacy-src/: .gitignore  Makefile  credits.c  credits.h  cursor.c  eventloop.c  game.c  game.h  gfx_buttons.c  gfx_buttons.h  gfx_charmap.h  highscores.c  highscores.h  level.c  macros.h  menu.h  render.c  render.h  settings.h  sprites.c  timers.c  timers.h  tutorial.h
rpm/: awesometd.spec
share/gfx/: logo.xcf  octopi.xcf
share/level/: level1.lvl
share/levels/: original.lvl
share/sfx/: README
src/: .gitignore  Makefile  Makefile.am  audio.c  audio.h  common.h  credits.c  credits.h  cursor.c  cursor.h  eventloop.c  eventloop.h  filepath.c  filepath.h  game.c  game.h  gfx_buttons.c  gfx_buttons.h  gfx_charmap.c  gfx_charmap.h  highscores.c  highscores.h  hiscore.c  hiscore.h  images.h  input.c  input.h  level.c  level.h  macros.h  main.c  menu.c  menu.h  oldformat.lvl  original.lvl  parser.c  parser.h  pathfind.c  render.c  render.h  (+11 more)
